2007-06-25  Andy Wingo  <wingo@pobox.com>

	* flumotion/manager/component.py
	(ComponentAvatar._mindPropertyErrback)
	(ComponentAvatar.reloadComponent._reloadComponentErrback):
	* flumotion/common/boot.py (boot): 
	* flumotion/twisted/flavors.py (StateRemoteCache.addListener): Fix
	the fixes.
	
	* flumotion/manager/component.py
	(ComponentAvatar._mindPropertyErrback)
	(ComponentAvatar.reloadComponent._reloadComponentErrback): 
	* flumotion/component/producers/screencast/screencast.py
	(Screencast.get_pipeline_string): 
	* flumotion/admin/admin.py (AdminModel._callRemoteErrback): 
	* flumotion/common/boot.py (boot): 
	* flumotion/common/common.py (daemonize): 
	* flumotion/twisted/flavors.py (StateRemoteCache.addListener):
	* flumotion/configure/uninstalled.py.in:
	* flumotion/configure/installed.py.in: Use safeprintf instead of
	print everywhere it can be called from a daemonized process.
	Fixes #613.

	* flumotion/component/consumers/httpstreamer/http.py
	(MultifdSinkStreamer.check_properties): Change to implement
	check_properties instead of do_check.

	* flumotion/component/component.py (BaseComponent.do_check): By
	default, call the check_properties vmethod.
	(BaseComponent.check_properties): New vmethod.
	(BaseComponent.setup): Rearrange some code; no semantic change.

	* doc/random/component-initialization-protocol (check_properties):
	New vmethod. Fixes #605.

2007-06-25  Arek Korbik  <arkadini@gmail.com>

	* flumotion/component/consumers/disker/disker.py
	  (Disker.configure_pipeline, Disker._markers_event_probe,
	  Disker._on_marker_stop, Disker._on_marker_start):
	* flumotion/component/consumers/disker/disker.xml:
	Make disker able to react to stream markers, take 2.

2007-06-25  Andy Wingo  <wingo@pobox.com>

	* flumotion/component/base/admin_gtk.py (BaseAdminGtk.cleanup):
	Set uiState to None when we stop listening.
	(BaseAdminGtkNode.__init__, BaseAdminGtkNode.gotUIState)
	(BaseAdminGtkNode.render): Fix bug that could cause cleanup() to