@@ -20,6 +20,7 @@
 # Headers in this file shall remain intact.
 
 import os
+import sys
 from flumotion.common.log import safeprintf
 
 def get():
@@ -30,8 +31,10 @@ def get():
             except:
                 os.makedirs(path)
         except OSError, e:
-            safeprintf('Error making dir %s: %s\n', e.filename, e.strerror)
-            safeprintf('Things are probably going to break!\n')
+            safeprintf(sys.stderr,
+                       'Error making dir %s: %s\n', e.filename, e.strerror)
+            safeprintf(sys.stderr,
+                       'Things are probably going to break!\n')
 
     if 'FLU_CACHE_DIR' in os.environ:
         cachedir = os.path.realpath(os.environ['FLU_CACHE_DIR'])
